Add timeout on SortIT